--- a/grpc-server/Dockerfile
+++ b/grpc-server/Dockerfile
@@ -1,7 +1,7 @@
 # Base image
 FROM python:3.10-slim
 # Set the working directory
-WORKDIR /is-final/is-final
+WORKDIR /is-final
 # Copy the requirements file and install dependencies
 COPY requirements.txt .
 RUN pip install -r requirements.txt
