--- a/grpc-server/docker-compose.yml
+++ b/grpc-server/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   grpc-server:
-    build: ./grpc-server
+    build: .
     container_name: grpc-server
     ports:
       - "50051:50051"
@@ -8,7 +8,7 @@ services:
       - grpc-server:/app/media
     # Define the OS/Container variable environments needed by the grpc server
     environment:
-      - GRPC_SERVER_PORT=50051
+      - GRPC_SERVER_PORT=50052
       - MAX_WORKERS=10
       - MEDIA_PATH=/app/media
       - DBNAME=mydatabase
